[package]
name = "to-capnp"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.20.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[build-dependencies]
capnpc = "0.20.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
